# RenderRoboCP

./: VTK.txt  enctest-h264.bat  enctest.bat
CodertoYUV/: CodertoYUV.sln
CodertoYUV/CodertoYUV/: CodertoYUV.cpp  CodertoYUV.cu  CodertoYUV.h  CodertoYUV.vcxproj  CodertoYUV.vcxproj.filters  CodertoYUV1.cpp  CodertoYUV1.h  ReadMe.txt  stdafx.cpp
CodertoYUV/CodertoYUV/Debug/: CL.read.1.tlog  CL.write.1.tlog  CodertoYUV.cu.cache  CodertoYUV.cu.deps  CodertoYUV.lastbuildstate  CodertoYUV.write.1.tlog  CodertoYUV_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
CodertoYUV/Debug/: CodertoYUV.exp  CodertoYUV.ilk  CodertoYUV.lib
CodertoYUV/RGBtoYUV/RGBtoYUV/: RGBtoYUV.cu.deps
WriterYUV/: WriterYUV.sln  screen_0_320x240_.yuv
WriterYUV/Debug/: WriterYUV.exp  WriterYUV.ilk  WriterYUV.lib
WriterYUV/WriterYUV/: ReadMe.txt  WriterYUV.cpp  WriterYUV.cu  WriterYUV.h  WriterYUV.vcxproj  WriterYUV.vcxproj.filters  stdafx.cpp
WriterYUV/WriterYUV/Debug/: vc100.idb  (+15 more)
offrenderstable/offrender/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ImageDataToQImage.cxx  ImageDataToQImage.h  OffScreenRendering.cxx  OffScreenRendering.opensdf  OffScreenRendering.sln  OffScreenRendering.tar  OffScreenRendering.vcxproj  OffScreenRendering.vcxproj.filters  WriterYUV.lib  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  описание.txt
offrenderstable/offrender/OffScreenRendering/: CMakeLists.txt  OffScreenRendering.cxx
(+65 files in other folders)
